Fix error alignment

--- a/public/style.css
+++ b/public/style.css
@@ -44,21 +44,25 @@ button {
 .weather-box {
   display: flex;
   flex-direction: column;
-  width: 50%;
-  margin-left: 5%;
+  align-items: center;
+  width: 40%;
   margin-bottom: 70px;
 }
 
-.timer {
+.timer-box {
   display: flex;
   flex-direction: column;
-  margin-right: 5%;
+  align-items: center;
+  width: 40%;
+  /* margin-right: 5%; */
 }
 
 .bcn-flag {
   width: 25%;
-  margin-bottom: 50px;
+  margin-top: 25px;
+  margin-bottom: 40px;
 }
+
 
 .credits-footer {
   display: flex;
@@ -68,7 +72,7 @@ button {
   margin-right: 10%;
   margin-left: 10%;
   font-family: Helvetica, Arial, sans-serif;
-  color: #333;
+  color: rgb(59, 58, 58);
   font-style: italic;
   font-size: smaller;
 }
